--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="sitesApp">
+  <body ng-app="PollApp">
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
 
@@ -29,8 +29,8 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/mainCtrl.js"></script>
-    <script src="scripts/controllers/pollCtrl.js"></script>
+    <script src="scripts/controllers/PollCtrl.js"></script>
+    <script src="scripts/controllers/CreatePollCtrl.js"></script>
     <!-- endbuild -->
   </body>
 </html>
